Some type conversion fixes